# Marg

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  marg.toml.example
.github/workflows/: publish-crates.yml  release.yml
bench/: README.md  report.py
bench/data/: README.md
bench/provider-stub/: Cargo.toml
bench/provider-stub/src/: main.rs
bench/rigs/: README.md
bench/rigs/dev-laptop/: README.md  run.sh  setup.sh
bench/scenarios/: B01-budget-exhaustion-cutoff.sh  C01-provider-5xx-failover.sh  C04-postgres-failover.sh  L01-cold-start.sh  L02-hot-path-decision-time.k6.js  L04-streaming-first-token.sh  L05-budget-check-overhead.sh  README.md  S01-single-instance-soak.k6.js  T01-single-instance-passthrough.k6.js  T02-single-instance-streaming.k6.js  T03-cluster-3-passthrough.sh
console/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
console/src/: api.ts  dom.ts  format.ts  main.ts  prom.ts  router.ts  shell.ts  styles.css  toast.ts  types.ts  ui.ts
console/src/pages/: admin_tokens.ts  api_docs.ts  audit.ts  budgets.ts  dashboard.ts  keys.ts  login.ts  policy.ts  providers.ts  requests.ts  routes.ts
docker/: Dockerfile
docs/: cluster-deployment.md  config-reference.md  embedding.md  faq.md  install.md  kavach.md  providers.md  routing-policy.md  troubleshooting.md
installer/: README.md  install.sh
marg-cli/: Cargo.toml
marg-cli/src/: init.rs  main.rs
marg-core/: Cargo.toml  README.md
marg-core/src/: admin.rs  budget.rs  config.rs  error.rs  kavach.rs  key.rs  lib.rs  pricing.rs  principal.rs  request_log.rs  routing.rs  secret.rs
marg-providers/: Cargo.toml  README.md
marg-providers/src/: anthropic.rs  bedrock.rs  error.rs  event_stream.rs  google.rs  lib.rs  openai.rs  request.rs  sigv4.rs
marg-server/: Cargo.toml  README.md  build.rs
marg-server/src/: auth.rs  chat.rs  errors.rs  hooks.rs  lib.rs  metered_storage.rs  metrics.rs  observability.rs  ops.rs  policy.rs  proxy.rs  quota.rs  routes.rs  shutdown.rs  sse.rs  state.rs  write_batcher.rs
marg-server/src/admin/: auth.rs  console.rs  error.rs  mod.rs  openapi.rs  router.rs  server.rs
marg-server/src/admin/handlers/: audit.rs  auth_tokens.rs  budgets.rs  keys.rs  mod.rs  openapi.rs  policy.rs  providers.rs  requests.rs  routes.rs
marg-server/src/kavach/: audit_target.rs  context.rs  flush.rs  invalidation.rs  keys.rs  lifecycle.rs  mod.rs  runtime.rs  session_store.rs  sink.rs
marg-storage/: Cargo.toml  README.md
marg-storage/migrations/: 20260523000000_p02_routing.sql
marg-storage/migrations/postgres/: 20260524000000_initial.sql  20260525000000_p05_admin.sql  20260527000000_p11_team_column.sql
marg-storage/migrations/sqlite/: 20260522000000_initial.sql  20260525000000_p05_admin.sql  20260527000000_p11_team_column.sql
marg-storage/src/: hot.rs  hot_local.rs  hot_redis.rs  lib.rs  postgres.rs  sqlite.rs
