[workspace]
resolver = "2"
members = [
    "marg-cli",
    "marg-core",
    "marg-server",
    "marg-storage",
    "marg-providers",
    "bench/provider-stub",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Elastic-2.0"
rust-version = "1.75"
authors = ["The Marg Contributors"]
repository = "https://github.com/SarthiAI/marg"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
async-trait = "0.1"

marg-core = { path = "marg-core" }
marg-server = { path = "marg-server" }
marg-storage = { path = "marg-storage" }
marg-providers = { path = "marg-providers" }

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
