[workspace]
resolver = "2"
members = [
    "marg-cli",
    "marg-core",
    "marg-server",
    "marg-storage",
    "marg-providers",
]

[workspace.package]
version = "0.1.5"
edition = "2021"
license = "Elastic-2.0"
rust-version = "1.75"
authors = ["Chirotpal Das"]
repository = "https://github.com/SarthiAI/Marg"
homepage = "https://github.com/SarthiAI/Marg"
readme = "README.md"
keywords = ["llm", "ai-gateway", "proxy", "openai", "gateway"]
categories = ["web-programming", "command-line-utilities", "network-programming"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "limit", "cors"] }
hyper = "1"
http = "1"
http-body-util = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json", "http2"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "chrono", "uuid", "macros", "migrate"] }
redis = { version = "0.27", default-features = false, features = ["tokio-comp", "tokio-rustls-comp", "script", "connection-manager"] }
deadpool-redis = { version = "0.18", default-features = false, features = ["rt_tokio_1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock", "std"] }
uuid = { version = "1", features = ["v4", "serde"] }
bytes = "1"
futures = "0.3"
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
moka = { version = "0.12", features = ["future"] }
rand = "0.8"
sha2 = "0.10"
data-encoding = "2"
secrecy = { version = "0.10", features = ["serde"] }
arc-swap = "1"
async-stream = "0.3"
governor = { version = "0.7", default-features = false, features = ["std", "quanta"] }
hmac = "0.12"
percent-encoding = "2"
prometheus = { version = "0.13", default-features = false, features = ["process"] }

# Kavach is a mandatory dependency for Marg v1.0. There is no Cargo feature
# flag and no "pure proxy" build variant: every Marg binary embeds Kavach.
# Version range locked at >=0.1.2, <0.2.0 (within-minor): patches flow through
# `cargo update` without a Marg release; a 0.2.0 cut triggers a coordinated
# Marg release. See ADR-001, ADR-010, ADR-011, ADR-015.
#
# 0.1.2 repins ml-dsa = "=0.1.0" (stable) upstream, which removes the
# rc-vs-stable pkcs8 collision Marg worked around during P09 with a direct
# pkcs8 = "=0.11.0-rc.11" workspace dep. That workaround is gone in P10.
#
# Floor raised to 0.1.5 in P27: the embedded gateway can be handed a
# `kavach_pq::ManagedAuditChain` (bounded audit memory), which lands in
# kavach-pq 0.1.5. The trio moves together to keep the chain type identical
# across the embedding boundary (ADR-032).
kavach-core  = ">=0.1.5, <0.2.0"
kavach-pq    = ">=0.1.5, <0.2.0"
kavach-redis = ">=0.1.5, <0.2.0"

marg-core = { path = "marg-core", version = "0.1.5" }
marg-server = { path = "marg-server", version = "0.1.5" }
marg-storage = { path = "marg-storage", version = "0.1.5" }
marg-providers = { path = "marg-providers", version = "0.1.5" }

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
