[package]
name = "marg-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Marg core types, configuration loader, and error definitions"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
data-encoding = { workspace = true }
secrecy = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
