[package]
name = "marg-providers"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "Marg provider adapter trait and per-provider client implementations"

[dependencies]
marg-core = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
secrecy = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }
async-stream = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
data-encoding = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
percent-encoding = { workspace = true }

[lints]
workspace = true
