[package]
name = "marg-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "Marg HTTP server: request pipeline, routes, graceful shutdown"
build = "build.rs"

[dependencies]
marg-core = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

[lints]
workspace = true
