[package]
name = "marg-server"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
description = "Marg HTTP server: request pipeline, routes, graceful shutdown"
build = "build.rs"

[dependencies]
marg-core = { workspace = true }
marg-storage = { workspace = true }
marg-providers = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
moka = { workspace = true }
arc-swap = { workspace = true }
secrecy = { workspace = true }

[lints]
workspace = true
