[package]
name = "marg-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Marg storage trait and backend implementations (SQLite default, Postgres recommended, Redis hot store)"

[features]
default = ["sqlite", "postgres", "redis-hot"]
sqlite = ["dep:sqlx", "sqlx/sqlite"]
postgres = ["dep:sqlx", "sqlx/postgres"]
redis-hot = ["dep:redis", "dep:deadpool-redis"]

[dependencies]
marg-core = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true, optional = true }
redis = { workspace = true, optional = true }
deadpool-redis = { workspace = true, optional = true }

[lints]
workspace = true
